# GroupTreeShap

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: test.yaml
analyses/: credit-card-default-example.ipynb  validate-against-xgboost.ipynb
scripts/: osx-env-activation.sh
src/grouptreeshap/: __init__.py  explainer.py  tree.cpp  tree.py  tree_ensemble.py  treeshap.cpp  ubjson.py
src/grouptreeshap/shap/: __init__.py  explainer.py
src/grouptreeshap/shap/_cpp/: __init__.py  tree.hpp  treeshap.cpp  treeshap_xgb.hpp
src/grouptreeshap/ubjson/: __init__.py  decoder.py  markers.py
src/lib/: tree.hpp  treeshap_xgb.hpp
tests/notebooks/: test_analyses_validation.py
tests/resources/: tree_examples.py  ubj_examples.py  xgb_export_example.py
tests/unit/: test.ipynb  test_explainer.py  test_tree_ensemble.py  test_ubjson.py
