[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.target.osx.activation]
scripts=["scripts/osx-env-activation.sh"]
env = { CPLUS_INCLUDE_PATH = "$SDKROOT/usr/include/c++/v1" }

[tool.pixi.tasks]
install-jupyter-kernel = "ipython kernel install --user --name=$PIXI_PROJECT_NAME"

[tool.pixi.dependencies]
python = "3.11.*"

[tool.pixi.pypi-dependencies]
grouptreeshap = { path = ".", editable = true, extras = ["integration", "dev", "test"] }

[tool.hatch.envs.hatch-test]
installer = "uv"
skip_install = true  # Manual installation in `pre-install-commands`
pre-install-commands = [
    "{env:HATCH_UV} pip install .[integration] --resolution={env:PKG_DEPS_RESOLUTION}",
    "{env:HATCH_UV} pip install .[test]",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]
pkg_deps_resolution = ["highest"]

[tool.hatch.envs.hatch-test.overrides]
matrix.pkg_deps_resolution.env-vars = "PKG_DEPS_RESOLUTION"
